--- a/templates/_cluster_overview.html
+++ b/templates/_cluster_overview.html
@@ -16,9 +16,9 @@
             <h2>Cluster Details</h2>
         </div>
         <div class="widget-content">
-            <div class="info-grid">
+            <div class="info-grid"> 
                 <strong>API server endpoint</strong> <span class="code">{{ cluster.endpoint or 'N/A' }}</span>
-                <strong>Cluster IAM role</strong> <span class="code">{{ cluster.roleArn or 'N/A' }}</span>
+                <strong>Cluster IAM role</strong> <span class="code">{{ cluster.role_arn or 'N/A' }}</span>
                 <strong>OpenID Connect provider</strong> <span class="code">{{ cluster.oidc_provider_url or 'Not available' }}</span>
                 <strong>Cluster ARN</strong> <span class="code">{{ cluster.arn }}</span>
             </div>
